Release history for Test-File-ShareDir

{{$NEXT}}
 [Dependencies::Stats]
 - Dependencies changed since 1.000005, see misc/*.deps* for details
 - configure: +1 (recommends: -1, suggests: +1)
 - develop: +10 ↑3 -2 (suggests: +1 ↑2)
 - runtime: (suggests: +1)
 - test: +1 (recommends: -2, suggests: +2)

 [Deprecations]
 - OO interfaces have a ->add_to_inc method which is being replaced with the more generic ->register, which wil retain
   meaning when the interface no longer actually uses @INC

 [Features]
 - OO interfaces now all have a ->register and a ->clear method.

1.000005 2014-08-15T23:41:58Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - tests augmented.
 - whitespace greatly reduced.

 [Dependencies::Stats]
 - Dependencies changed since 1.000004, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1 (suggests: ↑1)
 - test: -4 (recommends: ↑1 -2)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Tests]
 - update Test::ReportPrereqs

1.000004 2014-07-22T19:29:27Z
 [Doc Bugfix]
 - Previous releases changelog was misleading.
 - We're requiring a newer Path::Tiny to avoid a problem. ( As opposed to the impression that a newer Path::Tiny caused
   the problem, grammar-- )

1.000003 2014-07-22T19:02:06Z
 [Bugfix]
 - Attempt to avoid tempdir(CLEANUP => 1) being an error by requiring newer Path::Tiny

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - runtime: ↑1

1.000002 2014-07-18T16:33:36Z
 [00 Trivial]
 - Minor packaging cleanups shaving ~7k

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - develop: (suggests: ↑2)
 - test: +2 ↑1 (recommends: +1)

1.000001 2014-06-07T15:14:38Z
 [00 Trivial]
 - Mostly internal aesthetic changes / perlcritic things.
 - tempdir behaviours used via Path::Tiny interface instead of directly.
 - Silly runtime function proxies mostly deleted.
 - packaging tweaked minorly

 [Dependencies::Stats]