@@ -10,6 +10,9 @@
 [Generic / DESCRIPTION]
 [Generic / OVERVIEW]
 [Generic / SIMPLE INTERFACE]
+[Generic / SCOPE LIMITED UTILITIES]
+[Generic / IMPORTING]
+
 ;[Generic / METHODS]
 ;[Collect / METHODS]
 [Collect / METHODS]
