@@ -5,7 +5,7 @@ Release history for Test-File-ShareDir
  - Dependencies changed since 1.000005, see misc/*.deps* for details
  - configure: +1 (recommends: -1, suggests: +1)
  - develop: +10 ↑3 -2 (suggests: +1 ↑2)
- - runtime: (suggests: +1)
+ - runtime: +2 (suggests: +1)
  - test: +1 (recommends: -2, suggests: +2)
 
  [Deprecations]
@@ -14,6 +14,7 @@ Release history for Test-File-ShareDir
 
  [Features]
  - OO interfaces now all have a ->register and a ->clear method.
+ - Now supports exporting with_dist_dir and with_module_dir functions from Test::File::ShareDir
 
 1.000005 2014-08-15T23:41:58Z
  [00 Trivial]
